syntax = "proto3";

package ai.metathings_wechatd.service.wechatd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message GetWechatSessionRequest {
	google.protobuf.StringValue js_code = 1 [(validator.field) = {msg_exists: true}];
}

message GetWechatSessionResponse {
	string open_id = 1;
	string session_key = 2;
	string union_id = 3;
}
